fix(bs-templates): sidebar must have a lower z-index than modals

--- a/packages/bs-templates/templates/modal/_export.scss
+++ b/packages/bs-templates/templates/modal/_export.scss
@@ -8,6 +8,7 @@
     width: 100%;
     color: black;
     position: relative;
+    margin-bottom: 15px;
   }
 
   &__title {
@@ -88,7 +89,7 @@
 
 .input-icon-right {
   position: relative;
-  max-width: 60%;
+  max-width: 95%;
   & > button {
     position: absolute;
     top: 0;
